# liq-data

./: .env.example  .gitignore  AGENT_STATE.md  AGENT_SUMMARY.md  README.md  pyproject.toml
artifacts/phase-0/: changed-files.txt  coverage-summary.txt  decisions.md  verify-output.txt
artifacts/phase-2/: cost.md
artifacts/phase-F/: verify.txt
docs/: calendar.md  coverage-manifest.md  databento-provider.md  exceptions.md  logging.md  universes.md
src/liq/data/: __init__.py  aggregation.py  async_fetcher.py  calendar.py  cli.py  cli_qa.py  coverage_gap_estimator.py  exceptions.py  fetcher.py  fomc_calendar.py  forex.py  fx_session.py  gaps.py  instruments.py  lockbox.py  manifest.py  options.py  policies.py  protocols.py  qa.py  rate_limiter.py  retry.py  service.py  settings.py  sync_events.py  universes.py  updater.py
src/liq/data/cli/: __init__.py  __main__.py  auth.py  common.py  fetch.py  info.py  main.py  manage.py  universe.py  validate.py
src/liq/data/providers/: __init__.py  alpaca.py  base.py  binance.py  binance_status.py  coinbase.py  databento.py  fred.py  oanda.py  polygon.py  sec_edgar.py  sp500_membership.py  tradestation.py
strategy-iterations/btc-4h-coinbase/: 04-backtest-runs.md
tests/: conftest.py  test_aggregation.py  test_alpaca.py  test_async_fetcher.py  test_batch_orchestration.py  test_binance.py  test_calendar.py  test_calendar_gap_helpers.py  test_cli.py  test_cli_backcompat.py  test_cli_databento.py  test_cli_qa.py  test_cli_sync_heartbeat.py  test_cli_universe.py  test_coinbase.py  test_coverage_gap_estimator.py  test_estimate_databento_cost.py  test_exceptions.py  test_fetcher.py  test_fomc_calendar.py  test_forex.py  test_fx_session.py  test_gaps.py  test_instruments.py  test_lockbox.py  test_manifest.py  test_oanda.py  test_options_port.py  test_polygon.py  test_protocols.py  test_providers.py  test_qa.py  test_rate_limiter.py  test_resolve_universe.py  test_retry.py  test_service.py  test_settings.py  test_snapshot_constituent_source.py  test_symbology_rename.py  test_sync_hardening.py  (+9 more)
tests/contracts/: test_coverage_manifest_xfail.py  test_databento_provider_xfail.py  test_universe_definition_xfail.py
tests/providers/: test_binance_status.py  test_databento.py  test_databento_batch_events.py  test_databento_batch_paths.py  test_databento_batch_staging.py  test_fred.py  test_sec_edgar.py  test_sec_edgar_form4.py  test_sp500_membership.py
